--- a/Review-Carousel/carousel.css
+++ b/Review-Carousel/carousel.css
@@ -1,18 +1,20 @@
 
-
+body{
+    background-color:black;
+}
 .review-container{ 
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 100px;
-    margin-left: 400px;
-    height: 300px;
-    width: 500px;
-    background-color: rgb(236, 246, 252);
+    margin-top: 170px;
+    margin-left: 500px;
+    height: 120px;
+    width: 250px;
+    background-color: rgb(253, 253, 253);
     padding: 100px;
     box-shadow: 300px;
-    border-radius: 30%;
+    border-radius: 10%;
 }
 
 .image-container{
@@ -22,9 +24,11 @@
     align-items: center;
 }
 .image-container .image{ 
-    height: 150px;
-    width: 150px;
+    height: 100px;
+    width: 100px;
     border-radius: 50%;
+    margin-bottom: 10px;
+    margin-top: 10px;
    
 }
 
@@ -32,29 +36,34 @@
     position: absolute;
     top: 25px;
     left: 10px;
-    height: 30px;
-    width: 30px;
+    height: 25px;
+    width: 25px;
     border-radius: 50%;
-    margin-top: 150px;
-    margin-left: 660px;
-}
-
-.details{
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-    text-decoration: none;
-    font-size: 20px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 200;
+    margin-top: 170px;
+    margin-left: 670px;
+    background-color:  rgb(69, 171, 254);
 }
 
 .profession{
-    color: rgb(69, 171, 254);
+   margin-left: 80px;
+   margin-top: 5px;
+    align-items: center;
+    text-decoration: none;
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 200;
+    color: rgb(143, 205, 255);
     font-variant-caps: all-petite-caps;
+}
+ .name {
+    margin-left: 80px;
+    margin-top: 20px;
+    align-items: center;
+    text-decoration: none;
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 200;
+    margin-top: 5px;
 }
 
 .arrow{
@@ -83,15 +92,29 @@
     -webkit-transform: rotate(135deg);
 
 }
+.description{
+    text-decoration: none;
+    text-align: center;
+    text-transform: lowercase;
+    font-family: sans-serif;
+    font-size: 15px;
+    font-weight: 0px;
 
-.surprise-me{
-    margin-top: 20px;
-    height: 30px;
-    width: 100px;
-    border-radius: 5px;
-    background-color: rgb(141, 195, 240);
 }
 
+.surprise-me{
+    margin-top: 15px;
+    height: 20px;
+    width: 100px;
+    border-color: aliceblue;
+    border-radius: 5px;
+    background-color: rgb(209, 234, 255);
+    margin-bottom: 15px;
+}
+
+button{
+    background-color: aliceblue;
+}
 @media screen and(max-width:450px) {
     .review-container{ 
         height: 50px;
